--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,53 @@
 body{
-    background-color: rgb(29, 29, 29);
+    background-color: #274a5e;
     margin: 0px;
 }
+
+/*TEXTOS*/
+p{
+    font-family: "Montserrat", sans-serif;
+    font-weight: 300;
+    font-size: 17px;
+    color: white;
+    text-align: justify;
+}
+h1{
+    font-family: "Montserrat", sans-serif;
+    color: white;
+}
+.serv_right{
+    display: flex;
+    justify-content: flex-end;
+}
+.text_about_2{
+    font-weight: 700;
+}
+
+/*BARRA DE NAVEGAÇÃO*/
+ul{
+    display: flex;
+    gap: 30px;
+}
+li{
+    font-family: "Montserrat", sans-serif;
+    list-style: none;
+}
+.nav_down{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 30px;
+}
+a{
+    text-decoration: none;
+    color: white;
+}
+
 
 /*ESPAÇAMENTOS*/
 .space_01{
     background-color: beige;
-    height: 30vh;
+    height: 25vh;
 }
 .space_02{
     background-color: beige;
@@ -19,9 +60,14 @@ body{
 
 /*BARRA DE NAVEGAÇÃO*/
 header{
-    margin: 0px;
+
     background-color: aqua;
     height: 70px;
+    margin-left: 20vh;
+    margin-right: 20vh;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 /*FOOTER*/
@@ -29,13 +75,16 @@ footer{
     margin: 0px;
     background-color: aqua;
     height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /*IMAGEM HOME*/
 .imagem_home{
     margin: 0px;
     background-color: rgb(21, 255, 0);
-    height: 63vh;
+    height: 70vh;
 }
 
 /*SOBRE*/
@@ -48,6 +97,9 @@ footer{
     margin-right: 20vh;
 }
 .text_about{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     background-color: rgb(194, 135, 46);
     width: 50%;
     height: 100%;
@@ -61,11 +113,11 @@ footer{
 /*SERVIÇOS*/
 .services{
     margin: 0px;
-    height: 91vh;
+    height: 100%;
     margin-left: 20vh;
     margin-right: 20vh;
 }
-.service_01{
+.service_left{
     height: 30%;
     display: flex;
     flex-direction: row;
@@ -79,37 +131,25 @@ footer{
     background-color: rgb(194, 135, 46);
     width: 50%;
     height: 100%;
+    margin: 30px;
 }
-.service_02{
+.service_right{
     height: 30%;
     display: flex;
     flex-direction: row;
 }
 .img_service_2{
-    background-color: rgb(201, 186, 52);
+    background-color: rgb(223, 48, 194);
     width: 50%;
     height: 100%;
 }
 .text_service_2{
-    background-color: rgb(194, 46, 194);
+    background-color: rgb(255, 139, 6);
     width: 50%;
     height: 100%;
+    margin: 30px;
 }
-.service_03{
-    height: 30%;
-    display: flex;
-    flex-direction: row;
-}
-.img_service_3{
-    background-color: rgb(201, 52, 181);
-    width: 50%;
-    height: 100%;
-}
-.text_service_3{
-    background-color: rgb(194, 135, 46);
-    width: 50%;
-    height: 100%;
-}
+
 
 /*JOBS*/
 .jobs{
@@ -123,7 +163,7 @@ footer{
     background-color: rgb(81, 194, 46);
     margin-left: 20vh;
     margin-right: 20vh;
-    width: 48.5%;
+    width: 30%;
     height: 100%;
 }
 .pictures_jobs{
@@ -146,6 +186,8 @@ footer{
     background-color: rgb(194, 135, 46);
     width: 50%;
     height: 100%;
+    display: flex;
+    align-items: center;
 }
 
 /*FINAL*/
@@ -164,6 +206,9 @@ footer{
     height: 100%;
 }
 .nav_footer{
+    display: flex;
+    justify-content: flex-start;
+    align-self: flex-start;
     background-color: rgb(76, 194, 46);
     width: 50%;
     height: 100%;
@@ -172,4 +217,8 @@ footer{
     background-color: rgb(194, 46, 174);
     width: 50%;
     height: 100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
 }
