--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,9 +1,25 @@
 @media (max-width: 767px) and (min-width: 390px) {
 
-/*BARRA DE NAVEGAÇÃO*/
-header{
-
+/*TEXTOS*/
+p{
+    font-family: "Montserrat", sans-serif;
+    font-weight: 300;
+    font-size: 12px;
+    color: white;
+    text-align: justify;
 }
+h1{
+    font-family: "Montserrat", sans-serif;
+    color: white;
+}
+.serv_right{
+    display: flex;
+    justify-content: flex-end;
+}
+.text_about_2{
+    font-weight: 700;
+}
+
 
 /*ESPAÇAMENTOS*/
 .space_01{
@@ -45,6 +61,7 @@ header{
     background-color: rgb(194, 135, 46);
     width: 100%;
     height: 100%;
+    order: 2;
 }
 .picture_about{
     background-color: rgb(201, 52, 181);
@@ -55,20 +72,20 @@ header{
 /*SERVIÇOS*/
 .services{
     margin: 0px;
-    height: 91vh;
-        margin-left: 5vh;
+    height: 100%;
+    margin-left: 5vh;
     margin-right: 5vh;
 }
-.service_01{
-    height: 30%;
+.service_left{
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 .img_service_1{
     background-color: rgb(201, 52, 181);
-    height: 100%;
-    width: 100%;
+    height: 20vh;
+    width: 36.2vh;
     margin-left: 5vh;
     margin-right: 5vh;
 }
@@ -78,36 +95,24 @@ header{
     width: 100%;
     margin-left: 5vh;
     margin-right: 5vh;
+    margin: 0;
 }
-.service_02{
+.service_right{
     height: 30%;
     display: flex;
     flex-direction: column;
 }
 .img_service_2{
-    background-color: rgb(201, 186, 52);
-    width: 100%;
-    height: 100%;
+    background-color: rgb(201, 52, 201);
+    height: 20vh;
+    width: 36.2vh;
 }
 .text_service_2{
-    background-color: rgb(194, 46, 194);
+    background-color: rgb(255, 145, 0);
     width: 100%;
     height: 100%;
-}
-.service_03{
-    height: 30%;
-    display: flex;
-    flex-direction: column;
-}
-.img_service_3{
-    background-color: rgb(201, 52, 181);
-    width: 100%;
-    height: 100%;
-}
-.text_service_3{
-    background-color: rgb(194, 135, 46);
-    width: 100%;
-    height: 100%;
+    margin: 0;
+    order: 2;
 }
 
 /*JOBS*/
@@ -121,7 +126,7 @@ header{
     background-color: rgb(81, 194, 46);
     margin-left: 5vh;
     margin-right: 5vh;
-    width: 48.5%;
+    width: 78.5%;
     height: 55%;
 }
 .pictures_jobs{
@@ -153,7 +158,7 @@ header{
     height: 50vh;
     margin-left: 5vh;
     margin-right: 5vh;
-        display: flex;
+    display: flex;
     flex-direction: column;
 }
 .logotipo_footer{
@@ -161,9 +166,15 @@ header{
     width: 100%;
     height: 100%;
 }
+.nav_footer{
+    display: none;
+}
 .contact{
     background-color: rgb(194, 46, 174);
     width: 100%;
     height: 100%;
+}
+.direitos_footer{
+    font-size: 10px;
 }
 }
